src/ToDo/Deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deploy
spec:
  selector: 
    matchLabels:
      name: todo-app
  template:
    metadata:
      labels:
        name: todo-app
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: todo-app
      containers:
      - name: todo-counter
        image: tododockerregistry.azurecr.io/todo-app/todo-image:19eb3028bf11f858ea753b8aeb43b1bbb1248578
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        ports:
        - containerPort: 8080
