src/ToDo/Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    name: todo-app
