src/ToDo/Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host:  todo-app.team2.patoarchitekci.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app
                port:
                  number: 8080
